--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ form {
     box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
 }
 
-input[type="email"], input[type="password"], input[type="text"] {
+input[type="email"], input[type="password"], input[type="text"], input[type="number"] {
     width: 92%;
     padding: 10px;
     margin: 5px 0;
